<resources>
    <string name="app_name">TibasosaTurismoApp</string>
    <string name="welcome">Bienvenido a la aplicación de turismo de Tibasosa</string>
    <string name="btnIngresar">Ingresar</string>
    <string name="btnRegistro">Resgistrarse</string>
    <string name="txtLogin">Usuario</string>
    <string name="txtPass">Contraseña</string>
    <string name="txtRePass">Repita la contraseña</string>
    <string name="txtEmail">Correo electrónico</string>
    <string name="btnSign">Registrarse</string>
    <string name="btnCancel">Volver</string>
    <string name="txtTiba">Tibasosa es un pueblo boyacense ubicado en la región Alto Chicamocha</string>
    <string name="txtTiba2">El pueblo es reconocido productor de  la feijoa, fruta con la que hacen desde arequipes hasta licor</string>
    <string name="menuover">Mi Perfil</string>
    <string name="menumain">Cerrar Sesion</string>
    <string name="menu1">Principal</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="title_activity_sites">SitesActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="menubar">Bares</string>
    <string name="menuhotel">Hoteles</string>
    <string name="menurestaurant">Restaurantes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment1">Hello blank fragment  #1</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment2">Hello blank fragment  #2</string>

    <string name="hello_blank_fragment3">Hello blank fragment  #3</string>
</resources>
